[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.28",
    "conan>=2.0.0",
    "pybind11>=2.6.1",
    "numpy",
    "tomlkit",
    "packaging",
]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "bertrand"
version = "0.0.1"
description = "(in development) Type-safe language bindings for Python/C++"
authors = [
    { name="Eric Erkela", email="eerkela42@gmail.com" }
]
readme = "README.rst"
license = { file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
keywords = [
    "numpy",
    "pandas",
    "data",
    "type",
    "typing",
    "dtype",
    "ExtensionDtype",
    "cast",
    "conversion",
    "astype",
    "dispatch",
    "multiple dispatch",
    "data science",
    "data analysis",
    "data cleaning",
    "data processing",
    "data manipulation",
    "data transformation",
    "data engineering",
    "ETL",
]
dependencies = [
    "conan",
    "jinja2",
    "kubernetes>=31.0.0,<32.0.0",
    "mcp==1.9.4",
    "numpy",
    "packaging>=24.2",
    "email-validator",
    # "pandas >= 2.0.0",
    "psutil",
    # "pyarrow",
    # "pybind11 >= 2.6.1",
    "pydantic",
    # "python-dateutil",
    # "pytz",
    "PyYAML>=6.0",
    # "regex",
    # "requests",
    # "setuptools",
    # "tqdm",
    # "tomlkit",
    # "tzlocal",
]
requires-python = ">=3.12"

[project.scripts]
bertrand = "bertrand.__main__:main"
bertrand-code-rpc = "bertrand.env.code:main"
bertrand-mcp = "bertrand.env.mcp:main"

[project.optional-dependencies]
dev = [
    "black",
    "bumpver",
    "cibuildwheel",
    # "cmake>=3.28",
    "mypy",
    "pandas-stubs",
    "pylint",
    "ruff",
    "pytest",
    "pytest-cpp",
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-tabs",
    "sphinx-togglebutton",
    "ty",
    # "types-colorama",
    # "types-beautifulsoup4",
    "types-psutil",
    # "types-python-dateutil",
    # "types-pytz",
    "types-PyYAML",
    # "types-requests",
    # "types-regex",
    "types-setuptools",
    # "types-tqdm",
    # "types-tzlocal",
]

[project.urls]
"Homepage" = "https://github.com/eerkela/bertrand"
# "Documentation" = "<link to readthedocs>"
"Issue Tracker" = "https://github.com/eerkela/bertrand/issues"

[tool.setuptools.packages.find]
include = ["bertrand*"]

[tool.setuptools.package-data]
bertrand = [
    "py.typed",
    "env/templates/**/*.j2",
]

[tool.setuptools.data-files]
"share/bertrand" = ["Containerfile"]

[tool.cibuildwheel.windows]
before-all = "choco install visualstudio2022buildtools"  # C/C++ build tools

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4
output-format = "full"
respect-gitignore = true

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    # "ANN",
    # "D",
    "DOC",
    "FIX",
]
# preview = true
exclude = ["*.pyi"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ty.src]
include = ["bertrand", "test", "ast_tests"]
exclude = []
respect-ignore-files = true

[tool.ty.analysis]
replace-imports-with-any = ["conan.**"]

[tool.ty.rules]
# Preserve default error behavior and explicitly track mypy-like warnings.
possibly-unresolved-reference = "error"
redundant-cast = "warn"
unused-ignore-comment = "warn"

[tool.ty.terminal]
error-on-warning = false

# Temporary legacy settings during mypy -> ty transition.
[tool.mypy]
allow_untyped_globals = false        # force globals to be typed
disallow_untyped_defs = true         # force function signatures to be typed
disallow_any_generics = true         # force generic containers to be typed
strict_optional = true               # force Nones to be explicitly typed
warn_redundant_casts = true          # warn if typing.cast() is unnecessary
warn_unused_ignores = true           # warn on unnecessary # type: ignore comments
warn_no_return = true                # warn on functions with no return branch
warn_unreachable = true              # warn on unreachable code after type analysis
pretty = true                        # add source context to error messages
color_output = true                  # colorize error messages
error_summary = true                 # print a short summary for each error

[[tool.mypy.overrides]]
module = ["conan.*"]
follow_untyped_imports = true

# Temporary legacy settings during pylint -> ruff transition.
[tool.pylint]
ignore-patterns = [".*\\.pyi"]       # ignore type stubs
disable = ["too-many-lines"]         # disable max line length for modules
extension-pkg-allow-list = "bertrand"  # load Cython extensions
load-plugins = ["pylint.extensions.docparams"]
accept-no-param-doc = false          # force function parameters to be documented
accept-no-return-doc = false         # force function return values to be documented
accept-no-raise-doc = false          # force exceptions to be documented
accept-no-yields-doc = false         # force generator yields to be documented
output-format = "colorized"
suggestion-mode = true
jobs = 0
