[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.28",
    "conan>=2.0.0",
    "pybind11>=2.6.1",
    "numpy",
    "tomlkit",
    "packaging",
]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "bertrand"
version = "0.0.1"
description = "(in development) Type-safe language bindings for Python/C++"
authors = [
    { name="Eric Erkela", email="eerkela42@gmail.com" }
]
readme = "README.rst"
license = { file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
keywords = [
    "numpy",
    "pandas",
    "data",
    "type",
    "typing",
    "dtype",
    "ExtensionDtype",
    "cast",
    "conversion",
    "astype",
    "dispatch",
    "multiple dispatch",
    "data science",
    "data analysis",
    "data cleaning",
    "data processing",
    "data manipulation",
    "data transformation",
    "data engineering",
    "ETL",
]
dependencies = [
    "conan",
    "kubernetes>=35.0.0,<36.0.0",
    "mcp==1.9.4",
    "numpy",
    "packaging>=24.2",
    "email-validator",
    # "pandas >= 2.0.0",
    "psutil",
    # "pyarrow",
    "pydantic",
    # "python-dateutil",
    # "pytz",
    "PyYAML>=6.0",
    # "regex",
    # "requests",
    # "setuptools",
    # "tomlkit",
    # "tzlocal",
]
requires-python = ">=3.12"

[project.scripts]
bertrand = "bertrand.__main__:main"
bertrand-code-rpc = "bertrand.env.code:main"
bertrand-mcp = "bertrand.env.mcp:main"

[project.optional-dependencies]
dev = [
    # "cmake>=3.28",
    "numpydoc",
    "pandas-stubs",
    "ruff",
    "pytest",
    "pytest-cpp",
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-tabs",
    "sphinx-togglebutton",
    "ty",
    "types-psutil",
    # "types-python-dateutil",
    # "types-pytz",
    "types-PyYAML",
    # "types-requests",
    # "types-regex",
    "types-setuptools",
    # "types-tzlocal",
]

[project.urls]
"Homepage" = "https://github.com/eerkela/bertrand"
# "Documentation" = "<link to readthedocs>"
"Issue Tracker" = "https://github.com/eerkela/bertrand/issues"

[tool.setuptools.packages.find]
include = ["bertrand*"]

[tool.setuptools.package-data]
bertrand = [
    "py.typed",
]

[tool.setuptools.data-files]
"share/bertrand" = ["Containerfile"]

[tool.cibuildwheel.windows]
before-all = "choco install visualstudio2022buildtools"  # C/C++ build tools

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4
output-format = "full"
respect-gitignore = true

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.ruff.lint]
preview = true
select = [
    "A",
    "ARG",
    "ANN",
    "B",
    "BLE",
    "C4",
    "D",
    "DOC",
    "DTZ",
    "E",
    "EM",
    "F",
    "FA",
    "FBT",
    "FIX",
    "G",
    "I",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLOT",
    "TC",
    "TID",
    "TRY",
    "UP",
    "W",
]
ignore = [
    "ANN401",   # allow Any where deliberately needed
    "COM812",   # formatter-compatible if COM is later enabled
    "ISC001",   # formatter-compatible if ISC is later enabled
]
exclude = ["*.pyi"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pydoclint]
ignore-one-line-docstrings = false

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.numpydoc_validation]
checks = [
    "PR01",
    "PR02",
    "PR03",
    "PR04",
    "PR07",
    "RT01",
    "RT03",
    "YD01",
]
exclude = [
    '\._.*$',
    '\.__repr__$',
    '\.__str__$',
]

[tool.ty.src]
include = ["bertrand", "test", "ast_tests"]
exclude = []
respect-ignore-files = true

[tool.ty.analysis]
replace-imports-with-any = ["conan.**"]

[tool.ty.rules]
# Preserve default error behavior and explicitly track mypy-like warnings.
possibly-unresolved-reference = "error"
redundant-cast = "error"
unused-ignore-comment = "error"

[tool.ty.terminal]
error-on-warning = false

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = "venv"
